# libsdpxx

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
include/libsdpxx/: config.hh  constants.hh  deserialization.hh  expected.hh  libsdpxx.hh  parse_error.hh  sdp_field_protocol_version.hh  sdp_field_unknown.hh  serialization.hh  session_description.hh  string_utils.hh
tests/: CMakeLists.txt  test_deserialization.cc  test_serialization.cc  test_string_utils.cc
